--- a/mathematics/complex analysis/Fractals.html
+++ b/mathematics/complex analysis/Fractals.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Introduction" href="Introduction.html" />
-    <link rel="prev" title="Complex Analysis" href="intro.html" />
+    <link rel="prev" title="Complex analysis" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -91,7 +91,7 @@
       <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="active">
-      <a href="intro.html">Complex Analysis</a>
+      <a href="intro.html">Complex analysis</a>
       <ul class="nav sidenav_l3">
       <li class="active">
         <a href="">Fractals</a>
@@ -114,10 +114,10 @@
     </ul>
     </li>
     <li class="">
-      <a href="../linear_algebra/intro.html">Linear Algebra</a>
+      <a href="../linear_algebra/intro.html">Linear algebra</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
+      <a href="../math_methods_1/intro.html">Mathematical methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical notation</a>
@@ -746,7 +746,7 @@ y \in \langle 0.1, 0.3\rangle\end{split}\]</div>
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Complex Analysis</a>
+    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Complex analysis</a>
     <a class='right-next' id="next-link" href="Introduction.html" title="next page">Introduction</a>
 
     </div>
