--- a/mathematics/complex analysis/Introduction.html
+++ b/mathematics/complex analysis/Introduction.html
@@ -91,7 +91,7 @@
       <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="active">
-      <a href="intro.html">Complex Analysis</a>
+      <a href="intro.html">Complex analysis</a>
       <ul class="nav sidenav_l3">
       <li class="">
         <a href="Fractals.html">Fractals</a>
@@ -114,10 +114,10 @@
     </ul>
     </li>
     <li class="">
-      <a href="../linear_algebra/intro.html">Linear Algebra</a>
+      <a href="../linear_algebra/intro.html">Linear algebra</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
+      <a href="../math_methods_1/intro.html">Mathematical methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical notation</a>
