--- a/mathematics/complex analysis/integrating.html
+++ b/mathematics/complex analysis/integrating.html
@@ -39,7 +39,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Linear Algebra" href="../linear_algebra/intro.html" />
+    <link rel="next" title="Linear algebra" href="../linear_algebra/intro.html" />
     <link rel="prev" title="Holomorphic functions" href="holomorphic_functions.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -91,7 +91,7 @@
       <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="active">
-      <a href="intro.html">Complex Analysis</a>
+      <a href="intro.html">Complex analysis</a>
       <ul class="nav sidenav_l3">
       <li class="">
         <a href="Fractals.html">Fractals</a>
@@ -114,10 +114,10 @@
     </ul>
     </li>
     <li class="">
-      <a href="../linear_algebra/intro.html">Linear Algebra</a>
+      <a href="../linear_algebra/intro.html">Linear algebra</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
+      <a href="../math_methods_1/intro.html">Mathematical methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical notation</a>
@@ -465,7 +465,7 @@ f( \gamma_2 (t) ) = \frac{1}{e^{it}}, \quad \gamma_2 ' (t) = i e^{it} \\
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="holomorphic_functions.html" title="previous page">Holomorphic functions</a>
-    <a class='right-next' id="next-link" href="../linear_algebra/intro.html" title="next page">Linear Algebra</a>
+    <a class='right-next' id="next-link" href="../linear_algebra/intro.html" title="next page">Linear algebra</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
