--- a/mathematics/linear_algebra/Basic_definitions_and_operations.html
+++ b/mathematics/linear_algebra/Basic_definitions_and_operations.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Eigenvalues and eigenvectors" href="Eigenvalues_and_eigenvectors.html" />
-    <link rel="prev" title="Linear Algebra" href="intro.html" />
+    <link rel="prev" title="Linear algebra" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -91,10 +91,10 @@
       <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
-      <a href="../complex analysis/intro.html">Complex Analysis</a>
+      <a href="../complex analysis/intro.html">Complex analysis</a>
     </li>
     <li class="active">
-      <a href="intro.html">Linear Algebra</a>
+      <a href="intro.html">Linear algebra</a>
       <ul class="nav sidenav_l3">
       <li class="active">
         <a href="">Basic definitions and operations</a>
@@ -111,7 +111,7 @@
     </ul>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
+      <a href="../math_methods_1/intro.html">Mathematical methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical notation</a>
@@ -842,7 +842,7 @@ f(\alpha \mathbf{x}) = \alpha f(\mathbf{x}),\end{split}\]</div>
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Linear Algebra</a>
+    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Linear algebra</a>
     <a class='right-next' id="next-link" href="Eigenvalues_and_eigenvectors.html" title="next page">Eigenvalues and eigenvectors</a>
 
     </div>
