--- a/mathematics/linear_algebra/Theory.html
+++ b/mathematics/linear_algebra/Theory.html
@@ -39,7 +39,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Mathematical Methods 1" href="../math_methods_1/intro.html" />
+    <link rel="next" title="Mathematical methods 1" href="../math_methods_1/intro.html" />
     <link rel="prev" title="Solving systems of linear equations" href="Linear_Systems.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -91,10 +91,10 @@
       <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
-      <a href="../complex analysis/intro.html">Complex Analysis</a>
+      <a href="../complex analysis/intro.html">Complex analysis</a>
     </li>
     <li class="active">
-      <a href="intro.html">Linear Algebra</a>
+      <a href="intro.html">Linear algebra</a>
       <ul class="nav sidenav_l3">
       <li class="">
         <a href="Basic_definitions_and_operations.html">Basic definitions and operations</a>
@@ -111,7 +111,7 @@
     </ul>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
+      <a href="../math_methods_1/intro.html">Mathematical methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical notation</a>
@@ -766,7 +766,7 @@ a_{13} \left | \begin{array}{ccc} a_{21} &amp; a_{22} \\ a_{31} &amp; a_{32} \en
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Linear_Systems.html" title="previous page">Solving systems of linear equations</a>
-    <a class='right-next' id="next-link" href="../math_methods_1/intro.html" title="next page">Mathematical Methods 1</a>
+    <a class='right-next' id="next-link" href="../math_methods_1/intro.html" title="next page">Mathematical methods 1</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
