--- a/mathematics/math_methods_1/Coordinate_Systems.html
+++ b/mathematics/math_methods_1/Coordinate_Systems.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Vectors" href="Vectors.html" />
-    <link rel="prev" title="Mathematical Methods 1" href="intro.html" />
+    <link rel="prev" title="Mathematical methods 1" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -91,13 +91,13 @@
       <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
-      <a href="../complex analysis/intro.html">Complex Analysis</a>
+      <a href="../complex analysis/intro.html">Complex analysis</a>
     </li>
     <li class="">
-      <a href="../linear_algebra/intro.html">Linear Algebra</a>
+      <a href="../linear_algebra/intro.html">Linear algebra</a>
     </li>
     <li class="active">
-      <a href="intro.html">Mathematical Methods 1</a>
+      <a href="intro.html">Mathematical methods 1</a>
       <ul class="nav sidenav_l3">
       <li class="active">
         <a href="">Coordinate systems</a>
@@ -825,7 +825,7 @@ y = -3904.71
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Mathematical Methods 1</a>
+    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Mathematical methods 1</a>
     <a class='right-next' id="next-link" href="Vectors.html" title="next page">Vectors</a>
 
     </div>
