--- a/z_extra_resources_for_researchers/Dakota.html
+++ b/z_extra_resources_for_researchers/Dakota.html
@@ -39,8 +39,8 @@
     <script async="async" src="../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Google Earth Engine Foundations" href="Google_Earth_Engine_Foundations.html" />
-    <link rel="prev" title="Creating maps in Cartopy" href="Cartography_Cartopy.html" />
+    <link rel="next" title="Google Earth Engine foundations" href="Google_Earth_Engine_Foundations.html" />
+    <link rel="prev" title="Cartopy (maps)" href="Cartography_Cartopy.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -91,22 +91,22 @@
     <a href="intro.html">Extra resources for researchers</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="Camera_Calibration.html">Camera Calibration</a>
+      <a href="Camera_Calibration.html">Camera calibration</a>
     </li>
     <li class="">
-      <a href="Cartography_Cartopy.html">Creating maps in Cartopy</a>
+      <a href="Cartography_Cartopy.html">Cartopy (maps)</a>
     </li>
     <li class="active">
       <a href="">Dakota</a>
     </li>
     <li class="">
-      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
+      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine foundations</a>
     </li>
     <li class="">
-      <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
+      <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine getting started</a>
     </li>
     <li class="">
-      <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
+      <a href="Particle_Image_Velocimetry.html">Particle image velocimetry (PIV)</a>
     </li>
   </ul>
   </li>
@@ -396,8 +396,8 @@ responses
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Cartography_Cartopy.html" title="previous page">Creating maps in Cartopy</a>
-    <a class='right-next' id="next-link" href="Google_Earth_Engine_Foundations.html" title="next page">Google Earth Engine Foundations</a>
+    <a class='left-prev' id="prev-link" href="Cartography_Cartopy.html" title="previous page">Cartopy (maps)</a>
+    <a class='right-next' id="next-link" href="Google_Earth_Engine_Foundations.html" title="next page">Google Earth Engine foundations</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
