--- a/z_extra_resources_for_researchers/intro.html
+++ b/z_extra_resources_for_researchers/intro.html
@@ -39,7 +39,7 @@
     <script async="async" src="../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Camera Calibration" href="Camera_Calibration.html" />
+    <link rel="next" title="Camera calibration" href="Camera_Calibration.html" />
     <link rel="prev" title="Introduction to statistics for Geoscientists" href="../mathematics/statistics/Statistics_for_Geoscientists.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -91,22 +91,22 @@
     <a href="">Extra resources for researchers</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="Camera_Calibration.html">Camera Calibration</a>
+      <a href="Camera_Calibration.html">Camera calibration</a>
     </li>
     <li class="">
-      <a href="Cartography_Cartopy.html">Creating maps in Cartopy</a>
+      <a href="Cartography_Cartopy.html">Cartopy (maps)</a>
     </li>
     <li class="">
       <a href="Dakota.html">Dakota</a>
     </li>
     <li class="">
-      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
+      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine foundations</a>
     </li>
     <li class="">
-      <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
+      <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine getting started</a>
     </li>
     <li class="">
-      <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
+      <a href="Particle_Image_Velocimetry.html">Particle image velocimetry (PIV)</a>
     </li>
   </ul>
   </li>
@@ -239,7 +239,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../mathematics/statistics/Statistics_for_Geoscientists.html" title="previous page">Introduction to statistics for Geoscientists</a>
-    <a class='right-next' id="next-link" href="Camera_Calibration.html" title="next page">Camera Calibration</a>
+    <a class='right-next' id="next-link" href="Camera_Calibration.html" title="next page">Camera calibration</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
