--- a/coding/Intro to Python/15_Flow_control_statements.html
+++ b/coding/Intro to Python/15_Flow_control_statements.html
@@ -82,7 +82,7 @@
     <a href="../intro.html">Coding</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../NumPy_Arrays.html">NumPy Arrays</a>
+      <a href="../NumPy_Arrays.html">NumPy arrays</a>
     </li>
     <li class="">
       <a href="../jupyter_book_guide.html">Jupyter Book guide</a>
