--- a/coding/intro.html
+++ b/coding/intro.html
@@ -39,7 +39,7 @@
     <script async="async" src="../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="NumPy Arrays" href="NumPy_Arrays.html" />
+    <link rel="next" title="NumPy arrays" href="NumPy_Arrays.html" />
     <link rel="prev" title="Landing page" href="../intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -82,7 +82,7 @@
     <a href="">Coding</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="NumPy_Arrays.html">NumPy Arrays</a>
+      <a href="NumPy_Arrays.html">NumPy arrays</a>
     </li>
     <li class="">
       <a href="jupyter_book_guide.html">Jupyter Book guide</a>
@@ -233,7 +233,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../intro.html" title="previous page">Landing page</a>
-    <a class='right-next' id="next-link" href="NumPy_Arrays.html" title="next page">NumPy Arrays</a>
+    <a class='right-next' id="next-link" href="NumPy_Arrays.html" title="next page">NumPy arrays</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
