--- a/mathematics/calculus/Vector_calculus.html
+++ b/mathematics/calculus/Vector_calculus.html
@@ -39,7 +39,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Complex Analysis" href="../complex analysis/intro.html" />
+    <link rel="next" title="Complex analysis" href="../complex analysis/intro.html" />
     <link rel="prev" title="Calculus" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -96,13 +96,13 @@
     </ul>
     </li>
     <li class="">
-      <a href="../complex analysis/intro.html">Complex Analysis</a>
+      <a href="../complex analysis/intro.html">Complex analysis</a>
     </li>
     <li class="">
-      <a href="../linear_algebra/intro.html">Linear Algebra</a>
+      <a href="../linear_algebra/intro.html">Linear algebra</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
+      <a href="../math_methods_1/intro.html">Mathematical methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical notation</a>
@@ -1023,7 +1023,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Calculus</a>
-    <a class='right-next' id="next-link" href="../complex analysis/intro.html" title="next page">Complex Analysis</a>
+    <a class='right-next' id="next-link" href="../complex analysis/intro.html" title="next page">Complex analysis</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
