--- a/mathematics/linear_algebra/Linear_Systems.html
+++ b/mathematics/linear_algebra/Linear_Systems.html
@@ -91,10 +91,10 @@
       <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
-      <a href="../complex analysis/intro.html">Complex Analysis</a>
+      <a href="../complex analysis/intro.html">Complex analysis</a>
     </li>
     <li class="active">
-      <a href="intro.html">Linear Algebra</a>
+      <a href="intro.html">Linear algebra</a>
       <ul class="nav sidenav_l3">
       <li class="">
         <a href="Basic_definitions_and_operations.html">Basic definitions and operations</a>
@@ -111,7 +111,7 @@
     </ul>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
+      <a href="../math_methods_1/intro.html">Mathematical methods 1</a>
     </li>
     <li class="">
       <a href="../mathematical_notation/intro.html">Mathematical notation</a>
