--- a/mathematics/math_methods_1/Vectors.html
+++ b/mathematics/math_methods_1/Vectors.html
@@ -91,13 +91,13 @@
       <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
-      <a href="../complex analysis/intro.html">Complex Analysis</a>
+      <a href="../complex analysis/intro.html">Complex analysis</a>
     </li>
     <li class="">
-      <a href="../linear_algebra/intro.html">Linear Algebra</a>
+      <a href="../linear_algebra/intro.html">Linear algebra</a>
     </li>
     <li class="active">
-      <a href="intro.html">Mathematical Methods 1</a>
+      <a href="intro.html">Mathematical methods 1</a>
       <ul class="nav sidenav_l3">
       <li class="">
         <a href="Coordinate_Systems.html">Coordinate systems</a>
