deploy: 4703b4008af4aadcc9acd7d7642b8befb0098840

--- a/mathematics/complex analysis/integrating.html
+++ b/mathematics/complex analysis/integrating.html
@@ -39,7 +39,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Linear algebra" href="../linear_algebra/intro.html" />
+    <link rel="next" title="Differential equations" href="../differential_equations/intro.html" />
     <link rel="prev" title="Holomorphic functions" href="holomorphic_functions.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -112,6 +112,9 @@
         <a href="">Complex integration</a>
       </li>
     </ul>
+    </li>
+    <li class="">
+      <a href="../differential_equations/intro.html">Differential equations</a>
     </li>
     <li class="">
       <a href="../linear_algebra/intro.html">Linear algebra</a>
@@ -465,7 +468,7 @@ f( \gamma_2 (t) ) = \frac{1}{e^{it}}, \quad \gamma_2 ' (t) = i e^{it} \\
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="holomorphic_functions.html" title="previous page">Holomorphic functions</a>
-    <a class='right-next' id="next-link" href="../linear_algebra/intro.html" title="next page">Linear algebra</a>
+    <a class='right-next' id="next-link" href="../differential_equations/intro.html" title="next page">Differential equations</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
