--- a/mathematics/intro.html
+++ b/mathematics/intro.html
@@ -94,6 +94,9 @@
       <a href="complex analysis/intro.html">Complex analysis</a>
     </li>
     <li class="">
+      <a href="differential_equations/intro.html">Differential equations</a>
+    </li>
+    <li class="">
       <a href="linear_algebra/intro.html">Linear algebra</a>
     </li>
     <li class="">
