--- a/mathematics/linear_algebra/Basic_definitions_and_operations.html
+++ b/mathematics/linear_algebra/Basic_definitions_and_operations.html
@@ -93,6 +93,9 @@
     <li class="">
       <a href="../complex analysis/intro.html">Complex analysis</a>
     </li>
+    <li class="">
+      <a href="../differential_equations/intro.html">Differential equations</a>
+    </li>
     <li class="active">
       <a href="intro.html">Linear algebra</a>
       <ul class="nav sidenav_l3">
