--- a/genindex.html
+++ b/genindex.html
@@ -230,6 +230,8 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/differential_equations/8_pde_second_order.html#index-0">Canonical form (2nd order PDE)</a>
+</li>
       <li><a href="z_extra_resources_for_researchers/Cartography_Cartopy.html#index-0">Cartopy</a>
 </li>
       <li><a href="z_extra_resources_for_researchers/Cartography_Cartopy.html#index-1">Cartopy: plotting shapefiles</a>
@@ -242,10 +244,10 @@
 </li>
       <li><a href="mathematics/sets and functions/functions.html#index-1">Codomain</a>
 </li>
-      <li><a href="mathematics/sets and functions/sets.html#index-2">Commutative (Abelian) group</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/sets and functions/sets.html#index-2">Commutative (Abelian) group</a>
+</li>
       <li><a href="mathematics/complex analysis/intro.html#index-0">Complex Analysis</a>
 </li>
       <li><a href="mathematics/complex analysis/Introduction.html#index-0">Complex conjugate</a>
@@ -266,6 +268,8 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/differential_equations/11_wave_eq.html#index-1">D&#39;Alembert&#39;s formula</a>
+</li>
       <li><a href="mathematics/complex analysis/complex_plane.html#index-2">De Moivre&#39;s formula</a>
 </li>
       <li><a href="mathematics/series_and_sequences/Fourier Transforms.html#index-1">Delta function</a>
@@ -288,6 +292,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/differential_equations/3_first-order_odes.html#index-1">Explicit form (DE)</a>
+</li>
       <li><a href="mathematics/sets and functions/elementary_functions_1.html#index-0">Exponential function</a>
 </li>
   </ul></td>
@@ -342,6 +348,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Intro to Python/9_Handling_errors.html#index-0">Handling errors</a>
 </li>
+      <li><a href="mathematics/differential_equations/10_heat_eq.html#index-0">Heat (diffusion) equation</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/complex analysis/holomorphic_functions.html#index-0">Holomorphic functions</a>
@@ -357,6 +365,8 @@
       <li><a href="coding/Intro to Python/3_If_statement.html#index-0">If statement</a>
 </li>
       <li><a href="mathematics/sets and functions/functions.html#index-4">Image (functions)</a>
+</li>
+      <li><a href="mathematics/differential_equations/3_first-order_odes.html#index-0">Implicit form (DE)</a>
 </li>
       <li><a href="coding/Intro to Python/10_Importing.html#index-0">Importing modules</a>
 </li>
@@ -392,6 +402,8 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/differential_equations/9_poisson_laplace_eq.html#index-1">Laplace&#39;s equation</a>
+</li>
       <li><a href="mathematics/calculus/Vector_calculus.html#index-12">Laplacian for scalar/vector fields</a>
 </li>
       <li><a href="mathematics/linear_algebra/Theory.html#index-1">Linear combination</a>
@@ -422,9 +434,11 @@
 </li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-1">Matrix-matrix multiplication</a>
 </li>
+      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-0">Matrix-vector multiplication</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-0">Matrix-vector multiplication</a>
+      <li><a href="mathematics/differential_equations/7_pde_first_order.html#index-0">Method of characteristics</a>
 </li>
       <li><a href="geosciences/Milankovitch_cycles.html#index-0">Milankovitch cycles</a>
 </li>
@@ -472,10 +486,10 @@
 </li>
       <li><a href="coding/Pandas/3_merge_combine_group_sort.html#index-3">Pandas: sorting</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Pandas/4_summary_statistics.html#index-0">Pandas: summary stats</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Intro to Python/15_Flow_control_statements.html#index-1">Pass statement</a>
 </li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-2">Permutations</a>
@@ -491,6 +505,8 @@
       <li><a href="coding/Intro to Python/17_Matplotlib.html#index-1">Plots: line</a>
 </li>
       <li><a href="coding/Intro to Python/17_Matplotlib.html#index-2">Plots: scatter</a>
+</li>
+      <li><a href="mathematics/differential_equations/9_poisson_laplace_eq.html#index-0">Poisson&#39;s equation</a>
 </li>
       <li><a href="mathematics/complex analysis/complex_plane.html#index-1">Polar form of complex numbers</a>
 </li>
@@ -526,6 +542,10 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/calculus/Vector_calculus.html#index-3">Scalar and vector fields</a>
 </li>
+      <li><a href="mathematics/differential_equations/12_similarity_solutions.html#index-0">Self-similar solutions</a>
+</li>
+      <li><a href="mathematics/differential_equations/10_heat_eq.html#index-1">Separation of variables</a>, <a href="mathematics/differential_equations/3_first-order_odes.html#index-2">[1]</a>
+</li>
       <li><a href="coding/Intro to Python/16_Sets.html#index-0">Sets</a>
 
       <ul>
@@ -534,10 +554,10 @@
       </ul></li>
       <li><a href="mathematics/linear_algebra/Theory.html#index-2">Spanning set</a>
 </li>
-      <li><a href="mathematics/statistics/Statistics_for_Geoscientists.html#index-0">Statistics: basics</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/statistics/Statistics_for_Geoscientists.html#index-0">Statistics: basics</a>
+</li>
       <li><a href="mathematics/calculus/Vector_calculus.html#index-5">Streamline plot</a>
 </li>
       <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-1">Surjection</a>
@@ -591,6 +611,14 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="geosciences/Wave_dispersion.html#index-0">Wave dispersion</a>
+</li>
+      <li><a href="mathematics/differential_equations/11_wave_eq.html#index-0">Wave equation</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/differential_equations/6_pde_basicdefinitions.html#index-0">Well-posedness</a>
+</li>
+      <li><a href="mathematics/differential_equations/4_higher_ord_lin_odes.html#index-0">Wronskian</a>
 </li>
   </ul></td>
 </tr></table>
