--- a/mathematics/complex analysis/Introduction.html
+++ b/mathematics/complex analysis/Introduction.html
@@ -114,6 +114,9 @@
     </ul>
     </li>
     <li class="">
+      <a href="../differential_equations/intro.html">Differential equations</a>
+    </li>
+    <li class="">
       <a href="../linear_algebra/intro.html">Linear algebra</a>
     </li>
     <li class="">
