--- a/mathematics/linear_algebra/intro.html
+++ b/mathematics/linear_algebra/intro.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Basic definitions and operations" href="Basic_definitions_and_operations.html" />
-    <link rel="prev" title="Complex integration" href="../complex analysis/integrating.html" />
+    <link rel="prev" title="Self-similar solutions" href="../differential_equations/12_similarity_solutions.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -92,6 +92,9 @@
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex analysis</a>
+    </li>
+    <li class="">
+      <a href="../differential_equations/intro.html">Differential equations</a>
     </li>
     <li class="active">
       <a href="">Linear algebra</a>
@@ -279,7 +282,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../complex analysis/integrating.html" title="previous page">Complex integration</a>
+    <a class='left-prev' id="prev-link" href="../differential_equations/12_similarity_solutions.html" title="previous page">Self-similar solutions</a>
     <a class='right-next' id="next-link" href="Basic_definitions_and_operations.html" title="next page">Basic definitions and operations</a>
 
     </div>
