deploy: df8794025fa167f236b9a34128c0ecbd36098981

--- a/mathematics/linear_algebra/Basic_definitions_and_operations.html
+++ b/mathematics/linear_algebra/Basic_definitions_and_operations.html
@@ -106,6 +106,9 @@
         <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
       </li>
       <li class="">
+        <a href="Linear_Algebra_in_Python.html">Linear Algebra in Python</a>
+      </li>
+      <li class="">
         <a href="Linear_Systems.html">Solving systems of linear equations</a>
       </li>
       <li class="">
