--- a/mathematics/linear_algebra/Linear_Systems.html
+++ b/mathematics/linear_algebra/Linear_Systems.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Theory" href="Theory.html" />
-    <link rel="prev" title="Eigenvalues and eigenvectors" href="Eigenvalues_and_eigenvectors.html" />
+    <link rel="prev" title="Linear Algebra in Python" href="Linear_Algebra_in_Python.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -104,6 +104,9 @@
       </li>
       <li class="">
         <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
+      </li>
+      <li class="">
+        <a href="Linear_Algebra_in_Python.html">Linear Algebra in Python</a>
       </li>
       <li class="active">
         <a href="">Solving systems of linear equations</a>
@@ -880,7 +883,7 @@ I \mathbf{x} = A^{-1}\mathbf{b} \\
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Eigenvalues_and_eigenvectors.html" title="previous page">Eigenvalues and eigenvectors</a>
+    <a class='left-prev' id="prev-link" href="Linear_Algebra_in_Python.html" title="previous page">Linear Algebra in Python</a>
     <a class='right-next' id="next-link" href="Theory.html" title="next page">Theory</a>
 
     </div>
