--- a/mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html
+++ b/mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html
@@ -39,7 +39,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Solving systems of linear equations" href="Linear_Systems.html" />
+    <link rel="next" title="Linear Algebra in Python" href="Linear_Algebra_in_Python.html" />
     <link rel="prev" title="Basic definitions and operations" href="Basic_definitions_and_operations.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -104,6 +104,9 @@
       </li>
       <li class="active">
         <a href="">Eigenvalues and eigenvectors</a>
+      </li>
+      <li class="">
+        <a href="Linear_Algebra_in_Python.html">Linear Algebra in Python</a>
       </li>
       <li class="">
         <a href="Linear_Systems.html">Solving systems of linear equations</a>
@@ -631,7 +634,7 @@ Eigenvectors:
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Basic_definitions_and_operations.html" title="previous page">Basic definitions and operations</a>
-    <a class='right-next' id="next-link" href="Linear_Systems.html" title="next page">Solving systems of linear equations</a>
+    <a class='right-next' id="next-link" href="Linear_Algebra_in_Python.html" title="next page">Linear Algebra in Python</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
