--- a/mathematics/numerical_methods/Timestepping_an_ODE.html
+++ b/mathematics/numerical_methods/Timestepping_an_ODE.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Series and sequences" href="../series_and_sequences/intro.html" />
-    <link rel="prev" title="Numerical methods" href="intro.html" />
+    <link rel="prev" title="Runge-Kutta integration method" href="Runge_Kutta_method.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -108,6 +108,9 @@
     <li class="active">
       <a href="intro.html">Numerical methods</a>
       <ul class="nav sidenav_l3">
+      <li class="">
+        <a href="Runge_Kutta_method.html">Runge-Kutta integration method</a>
+      </li>
       <li class="active">
         <a href="">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
       </li>
@@ -428,7 +431,7 @@ you will be doing this for problems either where <span class="math notranslate n
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Numerical methods</a>
+    <a class='left-prev' id="prev-link" href="Runge_Kutta_method.html" title="previous page">Runge-Kutta integration method</a>
     <a class='right-next' id="next-link" href="../series_and_sequences/intro.html" title="next page">Series and sequences</a>
 
     </div>
