--- a/mathematics/numerical_methods/intro.html
+++ b/mathematics/numerical_methods/intro.html
@@ -39,7 +39,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Solving (or “timestepping”) an ordinary differential equation (ODE)" href="Timestepping_an_ODE.html" />
+    <link rel="next" title="Runge-Kutta integration method" href="Runge_Kutta_method.html" />
     <link rel="prev" title="Review of tensors" href="../mathematical_notation/Tensors_Review.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -108,6 +108,9 @@
     <li class="active">
       <a href="">Numerical methods</a>
       <ul class="nav sidenav_l3">
+      <li class="">
+        <a href="Runge_Kutta_method.html">Runge-Kutta integration method</a>
+      </li>
       <li class="">
         <a href="Timestepping_an_ODE.html">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
       </li>
@@ -255,7 +258,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../mathematical_notation/Tensors_Review.html" title="previous page">Review of tensors</a>
-    <a class='right-next' id="next-link" href="Timestepping_an_ODE.html" title="next page">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
+    <a class='right-next' id="next-link" href="Runge_Kutta_method.html" title="next page">Runge-Kutta integration method</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
