deploy: a405b00403108963deb0982a93f81bdda3e9c7f2

--- a/mathematics/math_methods_1/intro.html
+++ b/mathematics/math_methods_1/intro.html
@@ -106,6 +106,9 @@
         <a href="Coordinate_Systems.html">Coordinate systems</a>
       </li>
       <li class="">
+        <a href="Eigenvalues.html">Eigenvalues</a>
+      </li>
+      <li class="">
         <a href="Vectors.html">Vectors</a>
       </li>
     </ul>
