--- a/mathematics/math_methods_1/Coordinate_Systems.html
+++ b/mathematics/math_methods_1/Coordinate_Systems.html
@@ -39,7 +39,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Vectors" href="Vectors.html" />
+    <link rel="next" title="Eigenvalues" href="Eigenvalues.html" />
     <link rel="prev" title="Mathematical methods 1" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -104,6 +104,9 @@
       <ul class="nav sidenav_l3">
       <li class="active">
         <a href="">Coordinate systems</a>
+      </li>
+      <li class="">
+        <a href="Eigenvalues.html">Eigenvalues</a>
       </li>
       <li class="">
         <a href="Vectors.html">Vectors</a>
@@ -829,7 +832,7 @@ y = -3904.71
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Mathematical methods 1</a>
-    <a class='right-next' id="next-link" href="Vectors.html" title="next page">Vectors</a>
+    <a class='right-next' id="next-link" href="Eigenvalues.html" title="next page">Eigenvalues</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
