--- a/mathematics/math_methods_1/Vectors.html
+++ b/mathematics/math_methods_1/Vectors.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Mathematical notation" href="../mathematical_notation/intro.html" />
-    <link rel="prev" title="Coordinate systems" href="Coordinate_Systems.html" />
+    <link rel="prev" title="Eigenvalues" href="Eigenvalues.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -104,6 +104,9 @@
       <ul class="nav sidenav_l3">
       <li class="">
         <a href="Coordinate_Systems.html">Coordinate systems</a>
+      </li>
+      <li class="">
+        <a href="Eigenvalues.html">Eigenvalues</a>
       </li>
       <li class="active">
         <a href="">Vectors</a>
@@ -774,7 +777,7 @@ if (outputEl) {{
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Coordinate_Systems.html" title="previous page">Coordinate systems</a>
+    <a class='left-prev' id="prev-link" href="Eigenvalues.html" title="previous page">Eigenvalues</a>
     <a class='right-next' id="next-link" href="../mathematical_notation/intro.html" title="next page">Mathematical notation</a>
 
     </div>
