--- a/mathematics/math_methods_1/Eigenvalues.html
+++ b/mathematics/math_methods_1/Eigenvalues.html
@@ -39,7 +39,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Vectors" href="Vectors.html" />
+    <link rel="next" title="&lt;no title&gt;" href="Multivariable_Calculus.html" />
     <link rel="prev" title="Coordinate systems" href="Coordinate_Systems.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -107,6 +107,9 @@
       </li>
       <li class="active">
         <a href="">Eigenvalues</a>
+      </li>
+      <li class="">
+        <a href="Vector_Calculus.html">Scalar fields</a>
       </li>
       <li class="">
         <a href="Vectors.html">Vectors</a>
@@ -784,7 +787,7 @@ The corresponding eigenvector is:
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Coordinate_Systems.html" title="previous page">Coordinate systems</a>
-    <a class='right-next' id="next-link" href="Vectors.html" title="next page">Vectors</a>
+    <a class='right-next' id="next-link" href="Multivariable_Calculus.html" title="next page">&lt;no title&gt;</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
