--- a/mathematics/math_methods_1/intro.html
+++ b/mathematics/math_methods_1/intro.html
@@ -109,6 +109,9 @@
         <a href="Eigenvalues.html">Eigenvalues</a>
       </li>
       <li class="">
+        <a href="Vector_Calculus.html">Scalar fields</a>
+      </li>
+      <li class="">
         <a href="Vectors.html">Vectors</a>
       </li>
     </ul>
