--- a/z_extra_resources_for_researchers/Google_Earth_Engine_Getting_Started_.html
+++ b/z_extra_resources_for_researchers/Google_Earth_Engine_Getting_Started_.html
@@ -109,7 +109,7 @@
       <a href="Particle_Image_Velocimetry.html">Particle image velocimetry (PIV)</a>
     </li>
     <li class="">
-      <a href="UAV_Mapping/intro.html">Remote sensing</a>
+      <a href="UAV_Mapping/intro.html">UAV Mapping</a>
     </li>
   </ul>
   </li>
