--- a/z_extra_resources_for_researchers/Particle_Image_Velocimetry.html
+++ b/z_extra_resources_for_researchers/Particle_Image_Velocimetry.html
@@ -39,7 +39,7 @@
     <script async="async" src="../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Remote sensing" href="UAV_Mapping/intro.html" />
+    <link rel="next" title="UAV Mapping" href="UAV_Mapping/intro.html" />
     <link rel="prev" title="Google Earth Engine getting started" href="Google_Earth_Engine_Getting_Started_.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -109,7 +109,7 @@
       <a href="">Particle image velocimetry (PIV)</a>
     </li>
     <li class="">
-      <a href="UAV_Mapping/intro.html">Remote sensing</a>
+      <a href="UAV_Mapping/intro.html">UAV Mapping</a>
     </li>
   </ul>
   </li>
@@ -698,7 +698,7 @@ end of iterative process.. Re-arranging vector fields..
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Google_Earth_Engine_Getting_Started_.html" title="previous page">Google Earth Engine getting started</a>
-    <a class='right-next' id="next-link" href="UAV_Mapping/intro.html" title="next page">Remote sensing</a>
+    <a class='right-next' id="next-link" href="UAV_Mapping/intro.html" title="next page">UAV Mapping</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
