deploy: 4c5543d364dd8779986db7172f59eeac6ca40446

--- a/genindex.html
+++ b/genindex.html
@@ -556,6 +556,8 @@
         <li><a href="mathematics/sets and functions/sets.html#index-0">(mathematics)</a>
 </li>
       </ul></li>
+      <li><a href="mathematics/numerical_methods/Solving_PDEs_SOR.html#index-0">SOR algorithm</a>
+</li>
       <li><a href="mathematics/linear_algebra/Theory.html#index-2">Spanning set</a>
 </li>
   </ul></td>
