--- a/mathematics/numerical_methods/Runge_Kutta_method.html
+++ b/mathematics/numerical_methods/Runge_Kutta_method.html
@@ -39,7 +39,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Solving (or “timestepping”) an ordinary differential equation (ODE)" href="Timestepping_an_ODE.html" />
+    <link rel="next" title="Successive over-relaxation (SOR)" href="Solving_PDEs_SOR.html" />
     <link rel="prev" title="Numerical methods" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -110,6 +110,9 @@
       <ul class="nav sidenav_l3">
       <li class="active">
         <a href="">Runge-Kutta integration method</a>
+      </li>
+      <li class="">
+        <a href="Solving_PDEs_SOR.html">Successive over-relaxation (SOR)</a>
       </li>
       <li class="">
         <a href="Timestepping_an_ODE.html">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
@@ -852,7 +855,7 @@ Therefore,</p>
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Numerical methods</a>
-    <a class='right-next' id="next-link" href="Timestepping_an_ODE.html" title="next page">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
+    <a class='right-next' id="next-link" href="Solving_PDEs_SOR.html" title="next page">Successive over-relaxation (SOR)</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
