--- a/mathematics/numerical_methods/intro.html
+++ b/mathematics/numerical_methods/intro.html
@@ -112,6 +112,9 @@
         <a href="Runge_Kutta_method.html">Runge-Kutta integration method</a>
       </li>
       <li class="">
+        <a href="Solving_PDEs_SOR.html">Successive over-relaxation (SOR)</a>
+      </li>
+      <li class="">
         <a href="Timestepping_an_ODE.html">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
       </li>
     </ul>
