deploy: 7bef4d77cedf4df93ebad7647b4ae45113673d5e

--- a/genindex.html
+++ b/genindex.html
@@ -538,6 +538,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="geosciences/Keplerian_Orbits.html#index-3">Rotating coordinates</a>
 </li>
+      <li><a href="mathematics/numerical_methods/Runge_Kutta_method.html#index-0">Runge-Kutta method</a>
+</li>
   </ul></td>
 </tr></table>
 
