deploy: 9688e3d2511b4ebbf56f52beadae5f441e09c0c6

--- a/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.html
+++ b/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.html
@@ -393,7 +393,10 @@ False
 <li><p>Find the minimum of this sublist and swap it with the first element (of the sublist)</p></li>
 </ol>
 <p>A diagram says more than a 1000 words:</p>
-<img src="../Images/SelectionSort.png" alt="drawing" width="80%"/></div>
+<div class="figure align-default">
+<a class="reference internal image-reference" href="../../_images/SelectionSort.png"><img alt="../../_images/SelectionSort.png" src="../../_images/SelectionSort.png" style="width: 80%;" /></a>
+</div>
+<img src="./Images/SelectionSort.png" alt="drawing" width="80%"/></div>
 </div>
 </div>
 
