deploy: a9f0ea7b6b33a0e5fe1995c74c1cb0fb58412425

--- a/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.html
+++ b/coding/Fundamentals of Computer Science/1_Algorythmic_Complexity.html
@@ -390,13 +390,13 @@ False
 <ol class="simple">
 <li><p>Find the minimum of the list and swap it with the first element.</p></li>
 <li><p>Now consider all elements behind the first index</p></li>
-<li><p>Find the minimum of this sublist and swap it with the first element (of the sublist)</p></li>
+<li><p>Find the minimum of this sublist and swap it with the first element (of the sublist)S</p></li>
 </ol>
 <p>A diagram says more than a 1000 words:</p>
 <div class="figure align-default">
-<a class="reference internal image-reference" href="../../_images/SelectionSort.png"><img alt="../../_images/SelectionSort.png" src="../../_images/SelectionSort.png" style="width: 80%;" /></a>
+<a class="reference internal image-reference" href="../../_images/SelectionSort.png"><img alt="../../_images/SelectionSort.png" src="../../_images/SelectionSort.png" style="width: 60%;" /></a>
 </div>
-<img src="./Images/SelectionSort.png" alt="drawing" width="80%"/></div>
+</div>
 </div>
 </div>
 
