deploy: 88aaa84f449d86bfd560928a214fe2580b743a1e

--- a/mathematics/math_methods_1/Coordinate_Systems.html
+++ b/mathematics/math_methods_1/Coordinate_Systems.html
@@ -109,7 +109,13 @@
         <a href="Eigenvalues.html">Eigenvalues</a>
       </li>
       <li class="">
-        <a href="Vector_Calculus.html">Scalar fields</a>
+        <a href="Multivariable_Calculus.html">Multivariable calculus</a>
+      </li>
+      <li class="">
+        <a href="Series.html">Series</a>
+      </li>
+      <li class="">
+        <a href="Vector_Calculus.html">Vector calculus</a>
       </li>
       <li class="">
         <a href="Vectors.html">Vectors</a>
