--- a/mathematics/math_methods_1/Vectors.html
+++ b/mathematics/math_methods_1/Vectors.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Mathematical notation" href="../mathematical_notation/intro.html" />
-    <link rel="prev" title="Scalar fields" href="Vector_Calculus.html" />
+    <link rel="prev" title="Vector calculus" href="Vector_Calculus.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -109,7 +109,13 @@
         <a href="Eigenvalues.html">Eigenvalues</a>
       </li>
       <li class="">
-        <a href="Vector_Calculus.html">Scalar fields</a>
+        <a href="Multivariable_Calculus.html">Multivariable calculus</a>
+      </li>
+      <li class="">
+        <a href="Series.html">Series</a>
+      </li>
+      <li class="">
+        <a href="Vector_Calculus.html">Vector calculus</a>
       </li>
       <li class="active">
         <a href="">Vectors</a>
@@ -829,7 +835,7 @@ if (outputEl) {{
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Vector_Calculus.html" title="previous page">Scalar fields</a>
+    <a class='left-prev' id="prev-link" href="Vector_Calculus.html" title="previous page">Vector calculus</a>
     <a class='right-next' id="next-link" href="../mathematical_notation/intro.html" title="next page">Mathematical notation</a>
 
     </div>
