--- a/mathematics/math_methods_1/intro.html
+++ b/mathematics/math_methods_1/intro.html
@@ -109,7 +109,13 @@
         <a href="Eigenvalues.html">Eigenvalues</a>
       </li>
       <li class="">
-        <a href="Vector_Calculus.html">Scalar fields</a>
+        <a href="Multivariable_Calculus.html">Multivariable calculus</a>
+      </li>
+      <li class="">
+        <a href="Series.html">Series</a>
+      </li>
+      <li class="">
+        <a href="Vector_Calculus.html">Vector calculus</a>
       </li>
       <li class="">
         <a href="Vectors.html">Vectors</a>
