deploy: 5b346bc4d30f6346eb71a9b5b45aa53a4402c77f

--- a/mathematics/math_methods_1/Coordinate_Systems.html
+++ b/mathematics/math_methods_1/Coordinate_Systems.html
@@ -109,7 +109,13 @@
         <a href="Eigenvalues.html">Eigenvalues</a>
       </li>
       <li class="">
+        <a href="Matrices_Linear_Algebra.html">Defining a matrix</a>
+      </li>
+      <li class="">
         <a href="Multivariable_Calculus.html">Multivariable calculus</a>
+      </li>
+      <li class="">
+        <a href="ODEs.html">Order of an ODE</a>
       </li>
       <li class="">
         <a href="Series.html">Series</a>
