--- a/mathematics/math_methods_1/Multivariable_Calculus.html
+++ b/mathematics/math_methods_1/Multivariable_Calculus.html
@@ -39,8 +39,8 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Series" href="Series.html" />
-    <link rel="prev" title="Eigenvalues" href="Eigenvalues.html" />
+    <link rel="next" title="Order of an ODE" href="ODEs.html" />
+    <link rel="prev" title="Defining a matrix" href="Matrices_Linear_Algebra.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -108,8 +108,14 @@
       <li class="">
         <a href="Eigenvalues.html">Eigenvalues</a>
       </li>
+      <li class="">
+        <a href="Matrices_Linear_Algebra.html">Defining a matrix</a>
+      </li>
       <li class="active">
         <a href="">Multivariable calculus</a>
+      </li>
+      <li class="">
+        <a href="ODEs.html">Order of an ODE</a>
       </li>
       <li class="">
         <a href="Series.html">Series</a>
@@ -624,8 +630,8 @@ The outer integral is:  32/3
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Eigenvalues.html" title="previous page">Eigenvalues</a>
-    <a class='right-next' id="next-link" href="Series.html" title="next page">Series</a>
+    <a class='left-prev' id="prev-link" href="Matrices_Linear_Algebra.html" title="previous page">Defining a matrix</a>
+    <a class='right-next' id="next-link" href="ODEs.html" title="next page">Order of an ODE</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
