--- a/mathematics/math_methods_1/Series.html
+++ b/mathematics/math_methods_1/Series.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Vector calculus" href="Vector_Calculus.html" />
-    <link rel="prev" title="Multivariable calculus" href="Multivariable_Calculus.html" />
+    <link rel="prev" title="Order of an ODE" href="ODEs.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -109,7 +109,13 @@
         <a href="Eigenvalues.html">Eigenvalues</a>
       </li>
       <li class="">
+        <a href="Matrices_Linear_Algebra.html">Defining a matrix</a>
+      </li>
+      <li class="">
         <a href="Multivariable_Calculus.html">Multivariable calculus</a>
+      </li>
+      <li class="">
+        <a href="ODEs.html">Order of an ODE</a>
       </li>
       <li class="active">
         <a href="">Series</a>
@@ -757,7 +763,7 @@ sin(x) =  x - x**3/6 + x**5/120 - x**7/5040 + O(x**8)
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Multivariable_Calculus.html" title="previous page">Multivariable calculus</a>
+    <a class='left-prev' id="prev-link" href="ODEs.html" title="previous page">Order of an ODE</a>
     <a class='right-next' id="next-link" href="Vector_Calculus.html" title="next page">Vector calculus</a>
 
     </div>
