deploy: b8b910d80f934782612da3d8115f8f01cff37f2d

--- a/mathematics/numerical_methods/Solving_PDEs_SOR.html
+++ b/mathematics/numerical_methods/Solving_PDEs_SOR.html
@@ -109,6 +109,9 @@
       <a href="intro.html">Numerical methods</a>
       <ul class="nav sidenav_l3">
       <li class="">
+        <a href="Forward_time_centred_space.html">Forward Time Centred Space (FTCS) scheme</a>
+      </li>
+      <li class="">
         <a href="Runge_Kutta_method.html">Runge-Kutta integration method</a>
       </li>
       <li class="active">
