--- a/genindex.html
+++ b/genindex.html
@@ -294,9 +294,11 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="geosciences/Milankovitch_cycles.html#index-1">Eccentricity</a>
 </li>
+      <li><a href="mathematics/differential_equations/3_first-order_odes.html#index-1">Explicit form (DE)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/differential_equations/3_first-order_odes.html#index-1">Explicit form (DE)</a>
+      <li><a href="mathematics/numerical_methods/Forward_time_centred_space.html#index-2">Explicit scheme</a>
 </li>
       <li><a href="mathematics/sets and functions/elementary_functions_1.html#index-0">Exponential function</a>
 </li>
@@ -312,15 +314,17 @@
 </li>
       <li><a href="coding/Intro to Python/1_Printing_and_formatting_statements.html#index-1">Formatted printing</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/series_and_sequences/Fourier Series.html#index-0">Fourier series</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/series_and_sequences/Fourier Series.html#index-1">Fourier series: coefficients</a>
 </li>
       <li><a href="mathematics/series_and_sequences/Fourier Transforms.html#index-0">Fourier transforms</a>
 </li>
       <li><a href="mathematics/complex analysis/Fractals.html#index-0">Fractals</a>
+</li>
+      <li><a href="mathematics/numerical_methods/Forward_time_centred_space.html#index-0">FTCS scheme</a>
 </li>
   </ul></td>
 </tr></table>
@@ -372,12 +376,14 @@
 </li>
       <li><a href="mathematics/differential_equations/3_first-order_odes.html#index-0">Implicit form (DE)</a>
 </li>
-      <li><a href="coding/Intro to Python/10_Importing.html#index-0">Importing modules</a>
+      <li><a href="mathematics/numerical_methods/Forward_time_centred_space.html#index-1">Implicit scheme</a>
 </li>
-      <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-0">Injection</a>
+      <li><a href="coding/Intro to Python/10_Importing.html#index-0">Importing modules</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-0">Injection</a>
+</li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-3">Inner product</a>
 </li>
       <li><a href="mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html#index-3">Invariants</a>
