--- a/mathematics/numerical_methods/Runge_Kutta_method.html
+++ b/mathematics/numerical_methods/Runge_Kutta_method.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Successive over-relaxation (SOR)" href="Solving_PDEs_SOR.html" />
-    <link rel="prev" title="Numerical methods" href="intro.html" />
+    <link rel="prev" title="Forward Time Centred Space (FTCS) scheme" href="Forward_time_centred_space.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -108,6 +108,9 @@
     <li class="active">
       <a href="intro.html">Numerical methods</a>
       <ul class="nav sidenav_l3">
+      <li class="">
+        <a href="Forward_time_centred_space.html">Forward Time Centred Space (FTCS) scheme</a>
+      </li>
       <li class="active">
         <a href="">Runge-Kutta integration method</a>
       </li>
@@ -854,7 +857,7 @@ Therefore,</p>
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Numerical methods</a>
+    <a class='left-prev' id="prev-link" href="Forward_time_centred_space.html" title="previous page">Forward Time Centred Space (FTCS) scheme</a>
     <a class='right-next' id="next-link" href="Solving_PDEs_SOR.html" title="next page">Successive over-relaxation (SOR)</a>
 
     </div>
