deploy: b2e12ffb32105c37b2c14d14d0669f6c2d75afbe

--- a/coding/Intro to Python/intro.html
+++ b/coding/Intro to Python/intro.html
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Printing and formatting statements" href="1_Printing_and_formatting_statements.html" />
-    <link rel="prev" title="Algorithmic Complexity" href="../Fundamentals of Computer Science/1_Algorythmic_Complexity.html" />
+    <link rel="prev" title="Algorithmic complexity" href="../Fundamentals of Computer Science/1_Algorythmic_Complexity.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -88,7 +88,7 @@
       <a href="../jupyter_book_guide.html">Jupyter Book guide</a>
     </li>
     <li class="">
-      <a href="../Fundamentals of Computer Science/intro.html">Fundamentals of Computer Science</a>
+      <a href="../Fundamentals of Computer Science/intro.html">Fundamentals of computer science</a>
     </li>
     <li class="active">
       <a href="">Intro to Python</a>
@@ -343,7 +343,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../Fundamentals of Computer Science/1_Algorythmic_Complexity.html" title="previous page">Algorithmic Complexity</a>
+    <a class='left-prev' id="prev-link" href="../Fundamentals of Computer Science/1_Algorythmic_Complexity.html" title="previous page">Algorithmic complexity</a>
     <a class='right-next' id="next-link" href="1_Printing_and_formatting_statements.html" title="next page">Printing and formatting statements</a>
 
     </div>
