--- a/coding/jupyter_book_guide.html
+++ b/coding/jupyter_book_guide.html
@@ -39,7 +39,7 @@
     <script async="async" src="../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Fundamentals of computer science" href="Fundamentals of Computer Science/intro.html" />
+    <link rel="next" title="Fundamentals of Computer Science" href="Fundamentals of Computer Science/intro.html" />
     <link rel="prev" title="NumPy arrays" href="NumPy_Arrays.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -88,7 +88,7 @@
       <a href="">Jupyter Book guide</a>
     </li>
     <li class="">
-      <a href="Fundamentals of Computer Science/intro.html">Fundamentals of computer science</a>
+      <a href="Fundamentals of Computer Science/intro.html">Fundamentals of Computer Science</a>
     </li>
     <li class="">
       <a href="Intro to Python/intro.html">Intro to Python</a>
@@ -697,7 +697,7 @@ Some text here
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="NumPy_Arrays.html" title="previous page">NumPy arrays</a>
-    <a class='right-next' id="next-link" href="Fundamentals of Computer Science/intro.html" title="next page">Fundamentals of computer science</a>
+    <a class='right-next' id="next-link" href="Fundamentals of Computer Science/intro.html" title="next page">Fundamentals of Computer Science</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
