--- a/coding/Intro to Python/15_Flow_control_statements.html
+++ b/coding/Intro to Python/15_Flow_control_statements.html
@@ -88,7 +88,7 @@
       <a href="../jupyter_book_guide.html">Jupyter Book guide</a>
     </li>
     <li class="">
-      <a href="../Fundamentals of Computer Science/intro.html">Fundamentals of computer science</a>
+      <a href="../Fundamentals of Computer Science/intro.html">Fundamentals of Computer Science</a>
     </li>
     <li class="active">
       <a href="intro.html">Intro to Python</a>
